--- a/webapp/src/main/webapp/index.html
+++ b/webapp/src/main/webapp/index.html
@@ -24,8 +24,8 @@
 </head>
 <body>
   <div align="center">
-    <h1>CI/CD using Jenkins & Docker</h1>
-    <h2>This application was deployed using AWS ECS, EKS.</h2>
+    <h1>Inner Index Page</h1>
+    <h2>webapp/src/main/webapp/index.html</h2>
     <p>For next steps, read the <a href="https://aws.amazon.com/ko">AWS Management Console</a>.</p>
     <p><img src="images/two-rabbit.jpg" alt="두마리 토끼" height="350"></p>
   </div>
