--- a/webapp/src/main/webapp/index.html
+++ b/webapp/src/main/webapp/index.html
@@ -24,8 +24,8 @@
 </head>
 <body>
   <div align="center">
-    <h1>Poll SCM</h1>
-    <h2>Every minutes</h2>
+    <h1>Hello World</h1>
+    <h2>Jenkins to Docker Deploy Test</h2>
     <p>For next steps, read the <a href="https://aws.amazon.com/ko">AWS Management Console</a>.</p>
     <p><img src="images/two-rabbit.jpg" alt="두마리 토끼" height="350"></p>
   </div>
