--- a/webapp/src/main/webapp/index.html
+++ b/webapp/src/main/webapp/index.html
@@ -24,8 +24,8 @@
 </head>
 <body>
   <div align="center">
-    <h1>Ansible & Docker</h1>
-    <h2>CI/CD Hands On</h2>
+    <h1>Ansible & EKS</h1>
+    <h2>CI/CD HandsOn Latest</h2>
     <p>For next steps, read the <a href="https://aws.amazon.com/ko">AWS Management Console</a>.</p>
     <p><img src="images/two-rabbit.jpg" alt="두마리 토끼" height="350"></p>
   </div>
